--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,3 @@
-# This is the main configuration file for the application.
-# ~~~~~
-
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
@@ -10,38 +7,6 @@ application.secret="%APPLICATION_SECRET%"
 # The application languages
 # ~~~~~
 application.langs="en"
-
-# Global object class
-# ~~~~~
-# Define the Global object class for this application.
-# Default to Global in the root package.
-# application.global=Global
-
-# Router
-# ~~~~~
-# Define the Router object to use for this application.
-# This router will be looked up first when the application is starting up,
-# so make sure this is the entry point.
-# Furthermore, it's assumed your route file is named properly.
-# So for an application router like `my.application.Router`,
-# you may need to define a router file `conf/my.application.routes`.
-# Default to Routes in the root package (and conf/routes)
-# application.router=my.application.Routes
-
-# Database configuration
-# ~~~~~
-# You can declare as many datasources as you want.
-# By convention, the default datasource is named `default`
-#
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=""
-
-# Evolutions
-# ~~~~~
-# You can disable evolutions if needed
-# evolutionplugin=disabled
 
 # Logger
 # ~~~~~
@@ -57,3 +22,22 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# Application
+# ~~~~~
+# The root URL is needed for sending Yo notifications and for constructing the callback URL for PubSubHubbub.
+# Do not add a trailing slash, do include the protocol.
+commlogs.rooturl="http://127.0.0.1:9000"
+
+# Yo Integration
+# ~~~~~
+# Enable the integration
+commlogs.yo.enabled=false
+
+# Yo API key
+commlogs.yo.key=""
+
+# Yo location verification addon
+commlogs.yo.verifylocation=false
+commlogs.yo.lat=0.0
+commlogs.yo.lng=0.0
+commlogs.yo.threshold=0.0
